# instalily-case

./: .gitignore  AGENTS.md  Makefile  README.md  start-dev.sh
docs/: agent-challenges.md  agent-tools.md  capacity-estimate.md  db-schema.md  design.md  prd.md  requirement.md
instalily-case-backend/: .gitignore  README.md  pyproject.toml  requirements.txt
instalily-case-backend/app/: agent.py  agent_tools.py  config.py  main.py  mcp_browser.py  models.py  prompt_templates.py  retrieval.py
instalily-case-backend/ingestion/: cli.py  config.py  parser.py  service.py  store.py
instalily-case-backend/scripts/: watch_ingestion_progress.py
instalily-case-backend/sql/: 001_ingestion_core.sql
instalily-case-backend/tests/: questions_from_requirements.md  test_agent_loop.py
instalily-case-front/: README.md  components.json  package-lock.json  package.json  tailwind.config.js
instalily-case-front/src/: App.css  App.js
instalily-case-front/src/api/: api.js  api.ts
instalily-case-front/src/app/: globals.css  layout.tsx  page.tsx
instalily-case-front/src/components/: ChatSummary.css  ChatSummary.js  ChatSummary.tsx  ChatWindow.css  ChatWindow.js  ChatWindow.tsx  Sidebar.css  Sidebar.js  Sidebar.tsx  app-shell.tsx
instalily-case-front/src/components/ui/: button.tsx  input.tsx  sheet.tsx
instalily-case-front/src/types/: chat.ts
